fix: small updates to styling to correct for overflow issues (#5179)
# Pull Request

## 📖 Description

<!---
Provide some background and a description of your work.
What problem does this change solve?
Is this a breaking change, chore, fix, feature, etc?
-->
This change makes the following style updates:
- updates the width of the panes to 300px to allow:
    - The color picker overlay to display without clipping
    - The fast-tabs to display without clipping
- updates the width of the select to be as minimal as the longest piece of text content will allow
- updates the overflow on several elements where it was unneeded
- updates the form component to be display flex without relying on an outside element to set it

## 👩‍💻 Reviewer Notes

<!---
Provide some notes for reviewers to help them provide targeted feedback and testing.

Do you recommend a smoke test for this PR? What steps should be followed?
Are there particular areas of the code the reviewer should focus on?
-->
Run the Creator and Explore apps after building the project and test the desktop and mobile views to see the changes.

## ✅ Checklist

### General

<!--- Review the list and put an x in the boxes that apply. -->

- [x] I have included a change request file using `$ yarn change`
- [ ] I have added tests for my changes.
- [x] I have tested my changes.
- [ ] I have updated the project documentation to reflect my changes.
- [x] I have read the [CONTRIBUTING](https://github.com/Microsoft/fast/blob/master/CONTRIBUTING.md) documentation and followed the [standards](https://www.fast.design/docs/community/code-of-conduct/#our-standards) for this project.

--- a/sites/site-utilities/src/components/editor/editor.style.css
+++ b/sites/site-utilities/src/components/editor/editor.style.css
@@ -3,7 +3,7 @@ html {
     --mobile-menu-bar-height: 100px;
     --desktop-footer-height: 178px;
     --mobile-footer-height: 283px;
-    --mobile-pane-width: 260;
+    --mobile-pane-width: 300;
     --footer-background-color: #181818;
     --fast-tooling-l1-color: #3B3B3B;
     --fast-tooling-l3-color: #2B2B2B;
@@ -52,6 +52,7 @@ html::-webkit-scrollbar-thumb {
     max-height: 100vh;
     overflow: auto;
     background: var(--fast-tooling-l4-color, #1B1B1B);
+    overflow-x: hidden;
 }
 
 .pane::-webkit-scrollbar {
@@ -67,7 +68,6 @@ html::-webkit-scrollbar-thumb {
 
 .pane__start {
     grid-column-start: 1;
-    
 }
 
 .pane__end {
@@ -81,7 +81,7 @@ html::-webkit-scrollbar-thumb {
 .container {
     display: grid;
     background: var(--container-background);
-    grid-template-columns: 260px auto 260px;
+    grid-template-columns: 300px auto 300px;
     grid-template-rows: auto var(--desktop-footer-height);
     height: calc(100vh + var(--desktop-footer-height));
 }
@@ -183,11 +183,11 @@ html::-webkit-scrollbar-thumb {
     grid-column-end: 4;
 }
 
-@media screen and (max-width: 899px) {
+@media screen and (max-width: 1279px) {
     .container {
         grid-template-columns: calc(var(--mobile-pane-width) * 1px) auto calc(var(--mobile-pane-width) * 1px);
         grid-template-rows: auto var(--mobile-footer-height);
-        margin-left: calc(var(--mobile-pane-width) * -1px);
+        margin: 0 calc(var(--mobile-pane-width) * -1px);
         width: calc((var(--mobile-pane-width) * 2 * 1px) + 100vw);
         transition: margin-left 0.2s ease-in;
         height: calc(100vh + var(--mobile-footer-height));
